--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -33,6 +34,7 @@
     "react-confetti": "^6.4.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
